--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Brewery Rater - Working Title</title>
+    <script src="angular/angular.js" charset="utf-8"></script>
+    <script src="angular-resource/angular-resource.js" charset="utf-8"></script>
+    <script src="@uirouter/angularjs/release/angular-ui-router.js" charset="utf-8"></script>
+    <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
 
