--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,14 @@
     <script src="angular-resource/angular-resource.js" charset="utf-8"></script>
     <script src="@uirouter/angularjs/release/angular-ui-router.js" charset="utf-8"></script>
     <script src="js/app.js" charset="utf-8"></script>
+    <script src="js/brewery/routes.js" charset="utf-8"></script>
+    <script src="js/brewery/brewery.controller.js" charset="utf-8"></script>
+    <script src="js/services/brewery.js" charset="utf-8"></script>
   </head>
-  <body>
+  <body ng-app="breweryApp">
+    <h1>Brewery Rater</h1>
+
+    <main data-ui-view></main>
 
   </body>
 </html>
